# AtonixCorp

./: .env.example  CHANGELOG.md  README.md  bitbucket-pipelines.yml  docker-compose.yml  setup.sh
.github/workflows/: ci.yml  deploy-pages.yml  jekyll-gh-pages.yml  release-desktop.yml
api/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  create_test_org.py  manage.py  requirements.txt
api/atonixcorp/: accounting_controls.py  admin.py  (+38 more)
app/: .dockerignore  .env.production  Dockerfile  README.md  ledgora-public-standards-baseline.json  package-lock.json  package.json
atonixcorpcli/: README.md  pyproject.toml
atonixcorpcli/atonixcorpcli/: __init__.py  main.py
atonixcorpsdk/: README.md  pyproject.toml
atonixcorpsdk/atonixcorpsdk/: __init__.py  client.py
atonixcorpsdk/atonixcorpsdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
atonixcorpsdk/tests/: test_client.py
brandinyx/: README.md  generate_social_mark_png.py  generate_social_pngs.py
dmg/: Info.plist  README.md
docs/: atonixcorp-css-system.md  company-identity.md  developer-ecosystem.md  email-template-system.md  enterprise-selector-console.md  financial-dashboard-design-bible.md  governance-cloud-export.md  onboarding-ui-standards.md  organization-email-service.md  pre-deployment-readiness-2026-07-20.md  workspace-creation-ui-standards.md
email-templates/: catalog.yaml
exe/: README.md  installer.iss
fint/: addimpl.md
frontend/: package.json
k8s/: README.md
ledgoramobile/: App.tsx  app.json  package-lock.json  package.json
toolbox/: README.md  pyproject.toml
toolbox/atonixcorp_toolbox/: __init__.py  audit.py  crypto.py  governance.py  main.py
toolbox/atonixcorp_toolbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
toolbox/tests/: test_governance.py
tools/atonixcorp_cli/: README.md  pyproject.toml
tools/atonixcorp_cli/atonixcorp_cli/: api.py  main.py  storage.py
tools/atonixcorp_cli/atonixcorp_cli.egg-info/: PKG-INFO
tools/atonixcorp_cli/ledgrionyx_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/atonixcorp_cli/tests/: test_cli.py
tools/ledgora_cli/: README.md  pyproject.toml
tools/ledgora_cli/ledgora_cli/: __main__.py  api.py  errors.py  main.py  storage.py
tools/ledgora_cli/ledgora_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tools/ledgora_cli/ledgrionyx_cli.egg-info/: PKG-INFO  entry_points.txt
tools/ledgora_cli/tests/: test_cli.py
(+1992 files in other folders)
