[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atonixcorpsdk"
version = "0.1.0"
description = "Official Python SDK for the AtonixCorp Developer Console Integration API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "AtonixCorp"}]

[tool.setuptools.packages.find]
include = ["atonixcorpsdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
